<resources>
    <string name="app_name">BookLibrary</string>
    <string name="book">Book</string>
    <string name="want_to_read">Want to Read</string>
    <string name="notification">Notification</string>
    <string name="notification_clicked">Notification Clicked</string>
    <string name="name">Ahmed Kabary</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="reviews_clicked">Reviews Clicked</string>
    <string name="favorite_clicked">Favorite Clicked</string>
    <string name="search_clicked">Search Clicked</string>
    <string name="profile_clicked">Profile Clicked</string>
    <string name="settings_clicked">Settings Clicked</string>
</resources>