<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/reviews"
            android:icon="@drawable/star"
            android:title="@string/reviews" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/bookmark"
            android:title="@string/favorite" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group2">

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/user"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />

    </group>

</menu>